# UniGameDev

./: README.md
GD_HW/: CMakeLists.txt  test.cpp
GD_HW/hw1/: CommandPattern-9830339.cpp
GD_HW/hw2v3/: Colors.hpp  Dice.hpp  EventSystem.hpp  MarPele-classic.cpp  MarPele-extended.cpp  MarPele.hpp  Mench-classic.cpp  Mench.hpp  Terminal.hpp  bench-marpele-classic.csv  bench-marpele-extended.csv  util.hpp
GD_HW/hw4/: Renderer.cpp  map.cpp
GD_HW/hw5/: Bone.cpp  Bone.h  Game.cpp  Readme-HW5-9830339.txt  Scene.cpp  Scene.h  Skeleton.cpp  Skeleton.h
GD_HW/hw6/: Box2D.cpp  Box2D.h  CollisionDetector.cpp  CollisionDetector.h  CollisionResolver.cpp  Game.cpp  PhysicalEngine.cpp  PhysicalEngine.h  Scene.cpp  Scene.h  simulation.cpp
Project/: GameOfBones.kts  PresentationLink.txt  README.md  StateMachine.py  tictactoe-minmax.py
Project/SimpleVision/: CMakeLists.txt  Game.cpp  Object.hpp  Scene.hpp
